# UnirFront

./: .env  .gitignore  BACKEND_SETUP.md  CONEXION_FRONTEND_CORE.md  CONNECTION_SETUP.md  GUIA_INICIO_RAPIDO.md  README-INTEGRATION.md  README.md  README_API_SWITCHING.md  WHATSAPP_INTEGRATION.md  backend-config-example.md  index.html  package-lock.json  package.json  swagger-core.json  tsconfig.json  vite-env.d.ts  vite.config.ts
.github/: copilot-instructions.md
backend-unir-sqlite/: .env.example  .gitignore  README.md  index.js  package-lock.json  package.json
backend-unir-sqlite/controllers/: authController.js  historyController.js
backend-unir-sqlite/db/: database.js
backend-unir-sqlite/middlewares/: authMiddleware.js  historyMiddleware.js
backend-unir-sqlite/models/: historyModel.js  usuariosModel.js
backend-unir-sqlite/postman/: API_Unir_Auth.postman_collection.json
core-mock/: ARQUITECTURA.md  README.md  SETUP_INSTRUCTIONS.md  env.example  pyproject.toml  requirements.txt  run.sh  setup_database.sql  setup_env.ps1
core-mock/src-core/: config.py  schemas.py
core-mock/src-core/api/: channels.py  conversations.py  messages.py
core-mock/src-core/utils/: logger.py
mock-backend/: QUICK_START.md  README.md  package-lock.json  package.json  server.js
mock-backend-ex/: QUICKSTART.md  README.md  data.json  package-lock.json  package.json  server.js  test-api.ps1  test-api.sh
src/: App.tsx  index.css  main-debug.tsx  main.tsx  vite-env.d.ts
src-core/: __init__.py  database.py  main.py  models.py
unir_analytics/: README.md  requirements.txt
(+41 files in other folders)
